fixed image distortion in CurrentTemp at large sizes

--- a/src/styles/CurrentTemp.scss
+++ b/src/styles/CurrentTemp.scss
@@ -29,12 +29,6 @@
 
 @media screen and (min-width: 1400px) {
     .current-temp-card {
-        img {
-            width: 200px;
-            height: 200px;
-            margin: auto;
-        }
-
         h1 {
             font-size: 32px;
         }
